Fix subheader layout and anchor jump position

--- a/htdocs/components/22_static_content.css
+++ b/htdocs/components/22_static_content.css
@@ -188,6 +188,7 @@ gallery page
 #gallery-toc        { height:120px; width:95%; margin:0 auto; background-color:[[PAGE_BG]];
                       z-index:1000; }
 #gallery-toc.stick  { position: fixed; top: 5px; }
+.anchor-offset      { position:relative; top:-150px; display: block; margin:0; padding:0; float:left; }
 div.gallery-nav     { display:inline-block; padding: 4px; height: 100px; width:15%; 
                       vertical-align:middle; border:1px solid [[TINT_BORDER]]; }
 .gallery-navlabel   { font-size: 150%; font-weight:bold; }
