--- a/htdocs/components/30_forms.css
+++ b/htdocs/components/30_forms.css
@@ -476,5 +476,5 @@ form.freeform-stt fieldset .form-field .ff-label {
 
 form.freeform-stt label { font-weight:bold; }
 
-form.gallery-header label { font-size: 150%; width:25%!important; }
-form.gallery-header div.ff-right { padding-left: 25%; }
+form.gallery-header label { font-size: 120%; width:40%!important; }
+form.gallery-header div.ff-right { padding-left: 40%; }
